test worksheet for functions development

--- a/api_rick_and_morty/rick_and_morty.ipynb
+++ b/api_rick_and_morty/rick_and_morty.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8c4b73f1",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "70df742c",
    "metadata": {},
    "outputs": [],
@@ -466,7 +466,7 @@
    "outputs": [],
    "source": [
     "# insert data into the  database\n",
-    "for rec in actor_list_list:\n",
+    "for rec in data:\n",
     "    cursor.execute(\"\"\"INSERT into api_schema.rick_and_morty(id, name, species, type, gender, origin, url, location, image,\n",
     "    num_episode_feature, created) VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s)  \"\"\", rec)\n",
     "\n",
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "3949f3e9",
    "metadata": {},
    "outputs": [],
@@ -504,30 +504,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a208bf04",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Engine(postgresql://kccnpcacazyzlp:***@ec2-3-225-213-67.compute-1.amazonaws.com:5432/de4jsjsel5i78g)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "engine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "58a22984",
    "metadata": {},
    "outputs": [],
@@ -539,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "96c0aad5",
    "metadata": {},
    "outputs": [],
@@ -551,183 +540,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f49977b3",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "826"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(query_result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "b78ed52f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>species</th>\n",
-       "      <th>type</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>origin</th>\n",
-       "      <th>url</th>\n",
-       "      <th>location</th>\n",
-       "      <th>image</th>\n",
-       "      <th>num_episode_feature</th>\n",
-       "      <th>created</th>\n",
-       "      <th>insert_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Rick Sanchez</td>\n",
-       "      <td>Human</td>\n",
-       "      <td></td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Earth (C-137)</td>\n",
-       "      <td>https://rickandmortyapi.com/api/character/1</td>\n",
-       "      <td>Citadel of Ricks</td>\n",
-       "      <td>https://rickandmortyapi.com/api/character/avat...</td>\n",
-       "      <td>51</td>\n",
-       "      <td>2017-11-04 18:48:46.250</td>\n",
-       "      <td>2022-06-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Morty Smith</td>\n",
-       "      <td>Human</td>\n",
-       "      <td></td>\n",
-       "      <td>Male</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>https://rickandmortyapi.com/api/character/2</td>\n",
-       "      <td>Citadel of Ricks</td>\n",
-       "      <td>https://rickandmortyapi.com/api/character/avat...</td>\n",
-       "      <td>51</td>\n",
-       "      <td>2017-11-04 18:50:21.651</td>\n",
-       "      <td>2022-06-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Summer Smith</td>\n",
-       "      <td>Human</td>\n",
-       "      <td></td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Earth (Replacement Dimension)</td>\n",
-       "      <td>https://rickandmortyapi.com/api/character/3</td>\n",
-       "      <td>Earth (Replacement Dimension)</td>\n",
-       "      <td>https://rickandmortyapi.com/api/character/avat...</td>\n",
-       "      <td>42</td>\n",
-       "      <td>2017-11-04 19:09:56.428</td>\n",
-       "      <td>2022-06-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Beth Smith</td>\n",
-       "      <td>Human</td>\n",
-       "      <td></td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Earth (Replacement Dimension)</td>\n",
-       "      <td>https://rickandmortyapi.com/api/character/4</td>\n",
-       "      <td>Earth (Replacement Dimension)</td>\n",
-       "      <td>https://rickandmortyapi.com/api/character/avat...</td>\n",
-       "      <td>42</td>\n",
-       "      <td>2017-11-04 19:22:43.665</td>\n",
-       "      <td>2022-06-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Jerry Smith</td>\n",
-       "      <td>Human</td>\n",
-       "      <td></td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Earth (Replacement Dimension)</td>\n",
-       "      <td>https://rickandmortyapi.com/api/character/5</td>\n",
-       "      <td>Earth (Replacement Dimension)</td>\n",
-       "      <td>https://rickandmortyapi.com/api/character/avat...</td>\n",
-       "      <td>39</td>\n",
-       "      <td>2017-11-04 19:26:56.301</td>\n",
-       "      <td>2022-06-29</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id          name species type  gender                         origin  \\\n",
-       "0   1  Rick Sanchez   Human         Male                  Earth (C-137)   \n",
-       "1   2   Morty Smith   Human         Male                        unknown   \n",
-       "2   3  Summer Smith   Human       Female  Earth (Replacement Dimension)   \n",
-       "3   4    Beth Smith   Human       Female  Earth (Replacement Dimension)   \n",
-       "4   5   Jerry Smith   Human         Male  Earth (Replacement Dimension)   \n",
-       "\n",
-       "                                           url                       location  \\\n",
-       "0  https://rickandmortyapi.com/api/character/1               Citadel of Ricks   \n",
-       "1  https://rickandmortyapi.com/api/character/2               Citadel of Ricks   \n",
-       "2  https://rickandmortyapi.com/api/character/3  Earth (Replacement Dimension)   \n",
-       "3  https://rickandmortyapi.com/api/character/4  Earth (Replacement Dimension)   \n",
-       "4  https://rickandmortyapi.com/api/character/5  Earth (Replacement Dimension)   \n",
-       "\n",
-       "                                               image  num_episode_feature  \\\n",
-       "0  https://rickandmortyapi.com/api/character/avat...                   51   \n",
-       "1  https://rickandmortyapi.com/api/character/avat...                   51   \n",
-       "2  https://rickandmortyapi.com/api/character/avat...                   42   \n",
-       "3  https://rickandmortyapi.com/api/character/avat...                   42   \n",
-       "4  https://rickandmortyapi.com/api/character/avat...                   39   \n",
-       "\n",
-       "                  created insert_date  \n",
-       "0 2017-11-04 18:48:46.250  2022-06-29  \n",
-       "1 2017-11-04 18:50:21.651  2022-06-29  \n",
-       "2 2017-11-04 19:09:56.428  2022-06-29  \n",
-       "3 2017-11-04 19:22:43.665  2022-06-29  \n",
-       "4 2017-11-04 19:26:56.301  2022-06-29  "
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -738,12 +566,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a936163",
+   "cell_type": "markdown",
+   "id": "fe0198cd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Doing things with functions"
+   ]
   },
   {
    "cell_type": "code",
@@ -752,28 +580,167 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### sql scripts\n",
+    "schema = 'api_schema'\n",
+    "table =  'rick_and_morty'\n",
+    "page_num = 41"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3c82052b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "password = '06938df49ede973cf4716b6b2aba6a991a1f74a83eeb57b4ddc76d69001736b1'\n",
+    "user = 'kccnpcacazyzlp'\n",
+    "db = 'de4jsjsel5i78g'\n",
+    "port = 5432\n",
+    "host = 'ec2-3-225-213-67.compute-1.amazonaws.com'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "91ad1e14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Schema Name:\n",
+      " AnIMAL\n",
+      "Enter Table Name:  \n",
+      "WILd_AnimAL\n",
+      "Enter API Start Page Number: \n",
+      "41\n",
+      "This payload has 12 records\n",
+      "This payload has 12 records\n",
+      "No more data in API, Exited loop!\n",
+      "Data count from api and database are 26 and 26 respectively. Operation successfull!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from sqlalchemy import create_engine \n",
+    "import config\n",
     "\n",
-    "select count(*) from api_schema.rick_and_morty\n",
+    "# create connetion\n",
+    "engine = create_engine(f\"postgresql://{user}:{password}@{host}:{port}/{db}\")\n",
+    "conn = engine.raw_connection()\n",
+    "cursor = conn.cursor()\n",
+    " \n",
+    "# main function that calls all other functions\n",
+    "def process_api_data_all(schema, table, page_num):\n",
+    "    create_schema(schema)\n",
+    "    create_table(schema, table)\n",
+    "    truncate_table(schema, table)\n",
+    "    data_inserted = pull_and_insert_data(schema, table, page_num)\n",
+    "    data_fetched = query_database(schema, table)\n",
+    "    if len(data_inserted[1]) == len(data_fetched):\n",
+    "        print(f\"\"\"Data count from api and database are {len(data_inserted[1])} and {len(data_fetched)} respectively. Operation successfull!\"\"\")\n",
+    "    conn.close()\n",
     "\n",
-    "select * from api_schema.rick_and_morty\n",
-    "\t\t   \n",
-    "CREATE SCHEMA  if not exists api_schema;\n",
-    "\t\t   \n",
-    "CREATE TABLE IF NOT EXISTS api_schema.rick_and_morty(\n",
-    "id SERIAL primary key,\n",
-    "name varchar(200),\n",
-    "species varchar(200),\n",
-    "type varchar(200),\n",
-    "gender varchar(20),\n",
-    "origin varchar(200),\n",
-    "url varchar(200),\n",
-    "location varchar(200),\n",
-    "image varchar(200),\n",
-    "num_episode_featured int,\n",
-    "created timestamp,\t\t   \n",
-    "insert_date date DEFAULT now()\n",
-    ")"
+    "# create schema function\n",
+    "def create_schema(schema):\n",
+    "    cursor.execute(f\"\"\" CREATE SCHEMA  if not exists {schema};\"\"\")\n",
+    "    conn.commit()\n",
+    "    \n",
+    "# create table function\n",
+    "def create_table(schema, table):\n",
+    "    cursor.execute(f\"\"\" \n",
+    "    CREATE TABLE IF NOT EXISTS {schema}.{table}(\n",
+    "                        id SERIAL primary key,\n",
+    "                        name varchar(200),\n",
+    "                        species varchar(200),\n",
+    "                        type varchar(200),\n",
+    "                        gender varchar(20),\n",
+    "                        origin varchar(200),\n",
+    "                        url varchar(200),\n",
+    "                        location varchar(200),\n",
+    "                        image varchar(200),\n",
+    "                        num_episode_feature int,\n",
+    "                        created timestamp,  \n",
+    "                        insert_date date DEFAULT now()\n",
+    "    )\n",
+    "    \"\"\")\n",
+    "    conn.commit()  \n",
+    "\n",
+    "# truncate table function\n",
+    "def truncate_table(schema, table):\n",
+    "    cursor.execute(f\"\"\" Truncate table {schema}.{table}; \"\"\")\n",
+    "    conn.commit()      \n",
+    "\n",
+    "# api pull function to pull and insert\n",
+    "def pull_and_insert_data(schema, table, page_num):\n",
+    "    actor_dict_list = []  #list for dicts\n",
+    "    actor_list_list = []  #list for lists\n",
+    "\n",
+    "    while True:\n",
+    "        url = f'https://rickandmortyapi.com/api/character?page={page_num}'\n",
+    "        response = requests.get(url)\n",
+    "        data  = response.json()\n",
+    "\n",
+    "        try:\n",
+    "            print(f\"This payload has {len(data['results'][0])} records\")\n",
+    "        except:\n",
+    "            print('No more data in API, Exited loop!')\n",
+    "            break\n",
+    "        for rec in data['results']:\n",
+    "            #dictionary\n",
+    "            actor_dict ={\n",
+    "                'id': rec['id'],\n",
+    "                'name': rec['name'],\n",
+    "                'species': rec['species'],\n",
+    "                'type': rec['type'],\n",
+    "                'gender': rec['gender'],\n",
+    "                'origin': rec['origin']['name'],\n",
+    "                'url': rec['url'],\n",
+    "                'location': rec['location']['name'],\n",
+    "                'image': rec['image'],\n",
+    "                'num_episode_feature': len(rec['episode']),\n",
+    "                'created': rec['created']\n",
+    "            }\n",
+    "            #list\n",
+    "            actor_list =[\n",
+    "               rec['id'],\n",
+    "               rec['name'],\n",
+    "               rec['species'],\n",
+    "               rec['type'],\n",
+    "               rec['gender'],\n",
+    "               rec['origin']['name'],\n",
+    "               rec['url'],\n",
+    "               rec['location']['name'],\n",
+    "               rec['image'],\n",
+    "           len(rec['episode']),\n",
+    "               rec['created']\n",
+    "            ]\n",
+    "            actor_dict_list.append(actor_dict)\n",
+    "            actor_list_list.append(actor_list)   \n",
+    "        page_num +=1\n",
+    "    for rec in actor_list_list:\n",
+    "        cursor.execute(f\"\"\"INSERT into {schema}.{table}(id, name, species, type, gender, origin, url, location,\n",
+    "                           image, num_episode_feature, created) VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s)  \n",
+    "                        \"\"\", rec)\n",
+    "        conn.commit()\n",
+    "    return[actor_dict_list,actor_list_list]\n",
+    "\n",
+    "# fetch inserted data from database\n",
+    "def query_database(schema, table):\n",
+    "    query_result = []    \n",
+    "    script  = f\"\"\"SELECT * FROM {schema}.{table};\"\"\"\n",
+    "    cursor.execute(script)\n",
+    "    for rec in cursor.fetchall():\n",
+    "        query_result.append(rec)\n",
+    "    return query_result\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    schema   = input(\"Enter Schema Name:\\n \").lower()\n",
+    "    table    = input(\"Enter Table Name:  \\n\").lower()\n",
+    "    page_num = int(input(\"Enter API Start Page Number: \\n\"))\n",
+    "    process_api_data_all(schema, table, page_num)"
    ]
   }
  ],
