--- a/api_rick_and_morty/rick_and_morty.ipynb
+++ b/api_rick_and_morty/rick_and_morty.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c4b73f1",
    "metadata": {},
    "outputs": [],
@@ -315,40 +315,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5e8ed5b0",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "[{'id': 801, 'name': '7+7 Years Old Morty', 'status': 'unknown', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'location': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/801.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/801', 'created': '2021-11-02T13:12:26.860Z'}, {'id': 802, 'name': '26 Years Old Morty', 'status': 'Dead', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'location': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/802.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/802', 'created': '2021-11-02T13:12:42.408Z'}, {'id': 803, 'name': '40 Years Old Morty', 'status': 'unknown', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'location': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/803.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/803', 'created': '2021-11-02T13:13:51.515Z'}, {'id': 804, 'name': 'Andy', 'status': 'unknown', 'species': 'Human', 'type': 'Mascot', 'gender': 'Male', 'origin': {'name': 'unknown', 'url': ''}, 'location': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/804.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/804', 'created': '2021-11-02T13:19:19.807Z'}, {'id': 805, 'name': 'Baby Mouse Skin Morty', 'status': 'Alive', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'location': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/805.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/805', 'created': '2021-11-02T13:31:17.973Z'}, {'id': 806, 'name': 'Metaphor for Capitalism', 'status': 'Dead', 'species': 'Humanoid', 'type': '', 'gender': 'Male', 'origin': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'location': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/806.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/806', 'created': '2021-11-02T13:33:10.457Z'}, {'id': 807, 'name': 'Beth Sanchez', 'status': 'Dead', 'species': 'Human', 'type': '', 'gender': 'Female', 'origin': {'name': 'Earth (C-137)', 'url': 'https://rickandmortyapi.com/api/location/1'}, 'location': {'name': \"Rick's Memories\", 'url': 'https://rickandmortyapi.com/api/location/126'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/807.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/807', 'created': '2021-11-02T13:39:31.038Z'}, {'id': 808, 'name': 'Crow Scare', 'status': 'Alive', 'species': 'Humanoid', 'type': 'Scarecrow', 'gender': 'Male', 'origin': {'name': 'Rick and Two Crows Planet', 'url': 'https://rickandmortyapi.com/api/location/125'}, 'location': {'name': 'Rick and Two Crows Planet', 'url': 'https://rickandmortyapi.com/api/location/125'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/808.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/808', 'created': '2021-11-02T13:41:47.963Z'}, {'id': 809, 'name': 'Pussifer', 'status': 'Dead', 'species': 'Animal', 'type': 'Tiger', 'gender': 'Male', 'origin': {'name': 'Rick and Two Crows Planet', 'url': 'https://rickandmortyapi.com/api/location/125'}, 'location': {'name': 'Rick and Two Crows Planet', 'url': 'https://rickandmortyapi.com/api/location/125'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/809.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/809', 'created': '2021-11-02T13:51:30.942Z'}, {'id': 810, 'name': 'Stan Lee Rick', 'status': 'unknown', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'unknown', 'url': ''}, 'location': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/810.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/810', 'created': '2021-11-02T13:55:06.815Z'}, {'id': 811, 'name': 'Re-Build-a-Morty Morty', 'status': 'unknown', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'unknown', 'url': ''}, 'location': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/811.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/811', 'created': '2021-11-02T14:06:40.357Z'}, {'id': 812, 'name': 'Deformed Morty', 'status': 'Dead', 'species': 'Humanoid', 'type': '', 'gender': 'Male', 'origin': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'location': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/812.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/812', 'created': '2021-11-02T14:07:57.818Z'}, {'id': 813, 'name': 'Crow Horse', 'status': 'Alive', 'species': 'Robot', 'type': 'Crow Horse', 'gender': 'unknown', 'origin': {'name': 'Rick and Two Crows Planet', 'url': 'https://rickandmortyapi.com/api/location/125'}, 'location': {'name': 'Earth (Replacement Dimension)', 'url': 'https://rickandmortyapi.com/api/location/20'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/813.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/813', 'created': '2021-11-02T14:11:56.442Z'}, {'id': 814, 'name': 'Bald Rick', 'status': 'Dead', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'unknown', 'url': ''}, 'location': {'name': \"Rick's Memories\", 'url': 'https://rickandmortyapi.com/api/location/126'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/814.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/814', 'created': '2021-11-02T15:16:51.977Z'}, {'id': 815, 'name': 'Punk Rick', 'status': 'Dead', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'unknown', 'url': ''}, 'location': {'name': \"Rick's Memories\", 'url': 'https://rickandmortyapi.com/api/location/126'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/815.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/815', 'created': '2021-11-02T15:19:11.398Z'}, {'id': 816, 'name': 'Party Rick', 'status': 'Dead', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'unknown', 'url': ''}, 'location': {'name': \"Rick's Memories\", 'url': 'https://rickandmortyapi.com/api/location/126'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/816.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/816', 'created': '2021-11-02T15:21:28.996Z'}, {'id': 817, 'name': 'Scar Rick', 'status': 'Dead', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'unknown', 'url': ''}, 'location': {'name': \"Rick's Memories\", 'url': 'https://rickandmortyapi.com/api/location/126'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/817.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/817', 'created': '2021-11-02T15:23:05.371Z'}, {'id': 818, 'name': 'Long Hair Rick', 'status': 'unknown', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'unknown', 'url': ''}, 'location': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/818.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/818', 'created': '2021-11-02T15:24:36.172Z'}, {'id': 819, 'name': 'Redhead Rick', 'status': 'Dead', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'unknown', 'url': ''}, 'location': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/819.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/819', 'created': '2021-11-02T15:26:36.495Z'}, {'id': 820, 'name': 'Redhead Morty', 'status': 'Dead', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'unknown', 'url': ''}, 'location': {'name': 'Citadel of Ricks', 'url': 'https://rickandmortyapi.com/api/location/3'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/820.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/820', 'created': '2021-11-02T15:27:02.303Z'}]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "[{'id': 821, 'name': 'Gotron', 'status': 'unknown', 'species': 'Robot', 'type': 'Ferret Robot', 'gender': 'Genderless', 'origin': {'name': 'Earth (Replacement Dimension)', 'url': 'https://rickandmortyapi.com/api/location/20'}, 'location': {'name': 'Earth (Replacement Dimension)', 'url': 'https://rickandmortyapi.com/api/location/20'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/821.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/48'], 'url': 'https://rickandmortyapi.com/api/character/821', 'created': '2021-11-02T17:15:24.788Z'}, {'id': 822, 'name': 'Young Jerry', 'status': 'unknown', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'Earth (Unknown dimension)', 'url': 'https://rickandmortyapi.com/api/location/30'}, 'location': {'name': 'Earth (Unknown dimension)', 'url': 'https://rickandmortyapi.com/api/location/30'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/822.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/822', 'created': '2021-11-02T17:18:31.934Z'}, {'id': 823, 'name': 'Young Beth', 'status': 'unknown', 'species': 'Human', 'type': '', 'gender': 'Female', 'origin': {'name': 'Earth (Unknown dimension)', 'url': 'https://rickandmortyapi.com/api/location/30'}, 'location': {'name': 'Earth (Unknown dimension)', 'url': 'https://rickandmortyapi.com/api/location/30'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/823.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/823', 'created': '2021-11-02T17:19:00.951Z'}, {'id': 824, 'name': 'Young Beth', 'status': 'unknown', 'species': 'Human', 'type': '', 'gender': 'Female', 'origin': {'name': 'Earth (Unknown dimension)', 'url': 'https://rickandmortyapi.com/api/location/30'}, 'location': {'name': 'Earth (Unknown dimension)', 'url': 'https://rickandmortyapi.com/api/location/30'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/824.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/824', 'created': '2021-11-02T17:19:47.957Z'}, {'id': 825, 'name': 'Young Jerry', 'status': 'unknown', 'species': 'Human', 'type': '', 'gender': 'Male', 'origin': {'name': 'Earth (Unknown dimension)', 'url': 'https://rickandmortyapi.com/api/location/30'}, 'location': {'name': 'Earth (Unknown dimension)', 'url': 'https://rickandmortyapi.com/api/location/30'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/825.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/51'], 'url': 'https://rickandmortyapi.com/api/character/825', 'created': '2021-11-02T17:20:14.305Z'}, {'id': 826, 'name': 'Butter Robot', 'status': 'Alive', 'species': 'Robot', 'type': 'Passing Butter Robot', 'gender': 'Genderless', 'origin': {'name': 'Earth (Replacement Dimension)', 'url': 'https://rickandmortyapi.com/api/location/20'}, 'location': {'name': 'Earth (Replacement Dimension)', 'url': 'https://rickandmortyapi.com/api/location/20'}, 'image': 'https://rickandmortyapi.com/api/character/avatar/826.jpeg', 'episode': ['https://rickandmortyapi.com/api/episode/9'], 'url': 'https://rickandmortyapi.com/api/character/826', 'created': '2021-11-02T17:24:37.458Z'}]\n"
+     ]
+    }
+   ],
    "source": [
     "# approach 1\n",
-    "page_num = 40\n",
+    "page_num = 41\n",
     "data_results = []\n",
+    "\n",
+    "url = f'https://rickandmortyapi.com/api/character?page={page_num}'\n",
+    "response = requests.get(url)\n",
+    "\n",
     "\n",
     "while True:\n",
     "    url = f'https://rickandmortyapi.com/api/character?page={page_num}'\n",
     "    response = requests.get(url)\n",
     "    data  = response.json()\n",
-    "    \n",
     "    try:\n",
-    "        print(len(data['results'][0]))\n",
+    "        print((len(data['results'][0])))\n",
     "    except:\n",
-    "        print('No more results, Exit loop')\n",
+    "#         print('No more results, Exit loop')\n",
     "        break\n",
-    "    data_results.extend(data['results'])    \n",
+    "#     data_results.extend(data['results'])\n",
+    "    print(data['results'])\n",
     "    page_num +=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1efae12f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data_results[0]"
+    "response"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6812477a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -587,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3c82052b",
    "metadata": {},
    "outputs": [],
@@ -601,27 +641,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "91ad1e14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter Schema Name:\n",
-      " AnIMAL\n",
-      "Enter Table Name:  \n",
-      "WILd_AnimAL\n",
-      "Enter API Start Page Number: \n",
-      "41\n",
-      "This payload has 12 records\n",
-      "This payload has 12 records\n",
-      "No more data in API, Exited loop!\n",
-      "Data count from api and database are 26 and 26 respectively. Operation successfull!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "from sqlalchemy import create_engine \n",
